--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev":" nodemon src/mail_service/mailservice.js"
+   
+    
   },
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@angular/animations": "~11.1.0",
     "@angular/common": "~11.1.0",
     "@angular/compiler": "~11.1.0",
@@ -19,8 +23,14 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^5.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "nodemailer": "^6.6.0",
+    "nodemon": "^2.0.7",
     "rxjs": "~6.6.0",
+    "save-dev": "0.0.1-security",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
