--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,6 @@
               "src/styles.css"
             ],
             "scripts": [
-            
               "node_modules/bootstrap/dist/js/bootstrap.js"
             ]
           },
@@ -123,6 +122,10 @@
               "devServerTarget": "portafolio:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
